--- a/Natours/zola/sass/base/_base.scss
+++ b/Natours/zola/sass/base/_base.scss
@@ -3,12 +3,27 @@
 	padding: 0;
 	box-sizing: inherit;
 }
-
 html {
 	// Defines 1rem.
 	font-size:62.5%;
+	@include respond(tab-land) {
+		font-size: 56.25%;
+	}
+	@include respond(tab-port) {
+		font-size: 50%;
+	}
+	@include respond(big-desktop) {
+		font-size: 75%;
+	}
 }
-
 body {
 	box-sizing: border-box;
+	padding: 3rem;
+	@include respond(tab-port) {
+		padding: 0;
+	}
+}
+::selection {
+	background-color: $color-primary;
+	color: $color-white;
 }
