--- a/Natours/zola/sass/base/_typography.scss
+++ b/Natours/zola/sass/base/_typography.scss
@@ -1,27 +1,14 @@
 body {
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
-	/* font-size: 16px; */
 	line-height: 1.7;
 	color: $color-grey-dark;
-	padding: 3rem;
 }
-
 .heading-primary {
 	color: $color-white;
 	text-transform: uppercase;
-
 	backface-visibility: hidden; /* a hack to fix shaking in animation */
 	margin-bottom: 6rem;
-
-	&--sub {
-		display: block;
-		font-size: 2rem;
-		font-weight: 700;
-		letter-spacing: 1.74rem;
-		animation: moveInRight 1s ease-out;
-	}
-
 	&--main {
 		display: block;
 		font-size: 6rem;
@@ -30,11 +17,24 @@ body {
 		animation-name: moveInLeft;
 		animation-duration: 1s;
 		animation-timing-function: ease-out;
+		@include respond(phone) {
+			letter-spacing: 1rem;
+			font-size: 5rem;
+		}
 		/* animation-iteration-count: 3; */
 		/* animation-delay: 3s; */
 	}
+	&--sub {
+		display: block;
+		font-size: 2rem;
+		font-weight: 700;
+		letter-spacing: 1.74rem;
+		animation: moveInRight 1s ease-out;
+		@include respond(phone) {
+			letter-spacing: .6rem;
+		}
+	}
 }
-
 .heading-secondary {
 	font-size:3.5rem;
 	text-transform:uppercase;
@@ -46,19 +46,22 @@ body {
 	color:transparent;
 	letter-spacing:.2rem;
 	transition:all .2s;
-
+	@include respond(tab-port) {
+		font-size: 3rem;
+	}
+	@include respond(phone) {
+		font-size: 2.5rem;
+	}
 	&:hover {
 		transform:skewY(2deg) skewX(15deg) scale(1.1);
 		text-shadow:.5rem 1rem 2rem rgba($color-black, .2);
 	}
 }
-
 .heading-tertiary {
 	font-size:$default-font-size;
 	font-weight:700;
 	text-transform:uppercase;
 }
-
 .paragraph {
 	font-size:$default-font-size;
 	&:not(:last-child) {
