--- a/Natours/zola/sass/components/_form.scss
+++ b/Natours/zola/sass/components/_form.scss
@@ -13,6 +13,9 @@
 		border-bottom: .3rem solid transparent;
 		width: 90%;
 		display: block;
+		@include respond(tab-port) {
+			width: 100%;
+		}
 		&:focus {
 			outline: none;
 			box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -42,6 +45,10 @@
 	&__radio-group {
 		width: 49%;
 		display: inline-block;
+		@include respond(tab-port) {
+			width: 100%;
+			margin-bottom: 2rem;
+		}
 	}
 	&__radio-input {
 		display: none;
