--- a/Natours/zola/sass/components/_popup.scss
+++ b/Natours/zola/sass/components/_popup.scss
@@ -10,6 +10,10 @@
 	opacity: 0;
 	visibility: hidden;
 	transition: all .3s;
+	@supports (backdrop-filter: blur(10px)) {
+		backdrop-filter: blur(10px);
+		background-color: rgba($color: $color-black, $alpha: .3);
+	}
 	&__content {
 		@include absCenter;
 		width: 75%;
@@ -22,11 +26,11 @@
 		transition: all .4s .2s;
 	}
 	&__left {
-		width: math.div(1, 3) * 100%;
+		width: math.div(100%, 3);
 		display: table-cell;
 	}
 	&__right {
-		width: math.div(2, 3) * 100%;
+		width: math.div(200%, 3);
 		display:table-cell;
 		vertical-align: middle;
 		padding: 3rem 5rem;
