--- a/Natours/zola/sass/components/_story.scss
+++ b/Natours/zola/sass/components/_story.scss
@@ -8,8 +8,19 @@
 	padding-left: 9rem;
 	font-size: $default-font-size;
 	transform: skewX(-12deg);
+	@include respond(tab-port) {
+		width: 100%;
+		padding: 4rem;
+		padding-left: 7rem;
+	}
+	@include respond(phone) {
+		transform: skewX(0);
+	}
 	& > * {
 		transform: skewX(12deg);
+		@include respond(phone) {
+			transform: skewX(0);
+		}
 	}
 	&__shape {
 		width: 15rem;
@@ -20,6 +31,9 @@
 		-webkit-clip-path: circle(50% at 50% 50%);
 		clip-path: circle(50% at 50% 50%);
 		transform: translateX(-3rem) skewX(12deg);
+		@include respond(phone) {
+			transform: translateX(-3rem) skewX(0);
+		}
 	}
 	&__img {
 		height: 100%;
